--- a/python_stack/django/django_intro/time_display_project/time_display/templates/index.html
+++ b/python_stack/django/django_intro/time_display_project/time_display/templates/index.html
@@ -6,11 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>Django Project</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>This is my Django project.</h1>
-    <hr>
-    <p>This page show by index.html</p>
+    <div class="container">
+        <div class="text">
+            <p>The current time and date:</p>
+        </div>
+        <h2> {{ time }} </h2>
+    </div>
 </body>
 </html>
