--- a/python_stack/django/django_full_stack/tv_shows_project/tv_shows_app/templates/updateshow.html
+++ b/python_stack/django/django_full_stack/tv_shows_project/tv_shows_app/templates/updateshow.html
@@ -25,16 +25,24 @@
                 <a href="{% url 'shows' %}" class="btn btn-primary" style="float: right;">Go Back</a>
             </div>
         </div>
+        <div style="color: red;"><strong>
+            {% if messages %}
+                {% for message in messages %}
+                    <p>**{{message}}</p>
+                {% endfor %}
+            {% endif %}
+            </strong>
+        </div>
         <form action="/shows/{{show.id}}/update" method="POST">
             {% csrf_token %}
             <div class="form-group">
                 <label for="inputTitle">Title</label>
-                <input type="text" class="form-control" id="inputTitle" name="title" value="{{show.title}}" required>
+                <input type="text" class="form-control" id="inputTitle" name="title" value="{{show.title}}">
             </div>
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="inputNetwork">Network</label>
-                <input type="text" class="form-control" id="inputNetwork" name="network" value="{{show.network}}" required>
+                <input type="text" class="form-control" id="inputNetwork" name="network" value="{{show.network}}">
               </div>
               <div class="form-group col-md-6">
                 <label for="inputDate">Release Date</label>
@@ -43,7 +51,7 @@
             </div>
             <div class="form-group">
                 <label for="inputDescripton">Description</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="desc" required>{{show.description}}</textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="desc">{{show.description}}</textarea>
             </div>
             <button type="submit" class="btn btn-primary">Update</button>
         </form>
