Complete Amadon Project  - Add purchase show total of that purchase, show total quantity of all purchase, and show total price of all purchase.  - Validation if user use inspect to change the price value.  - Solve problem if user push refresh button on checkout page.  - Provide 'reset' button for reseting all purchase in database

--- a/python_stack/django/django_full_stack/amadon-master/poorly_coded_store/templates/store/checkout.html
+++ b/python_stack/django/django_full_stack/amadon-master/poorly_coded_store/templates/store/checkout.html
@@ -15,8 +15,8 @@
 <body>
     <div class="container">
         <h3>Thank you for your business!</h3>
-        <p>We charged your credit card for ${{total}}</p>
-        <p>You have ordered {{qtt}} items so far and spent ${{sum}} with Amadon.com!</p>
+        <p>We charged your credit card for ${{products.total_price}}</p>
+        <p>You have ordered {{qtt}} items so far and spent ${{total}} with Amadon.com!</p>
         <p><a href="/">Go Back</a></p>
     </div>
 </body>
