--- a/python_stack/django/django_full_stack/amadon-master/poorly_coded_store/templates/store/index.html
+++ b/python_stack/django/django_full_stack/amadon-master/poorly_coded_store/templates/store/index.html
@@ -9,12 +9,21 @@
     <style>
         h1 {
             margin: 30px 0px;
+            display: inline-block;
+        }
+        a {
+            float: right;
+            display: inline-block;
+            margin: 30px 0px;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Amadon Store!</h1>
+        <div class="header">
+            <h1>Amadon Store!</h1>
+            <a href="/reset" class="btn btn-danger">RESET</a>
+        </div>
         <table class="table">
             <thead>
                 <tr>
