--- a/MERN/React/box_generator/src/App.css
+++ b/MERN/React/box_generator/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.header {
+  margin: 30px 0px;
+}
+
+p {
+  width: 100px;
+  height: 100px;
+  margin: 10px 10px;
+}
