--- a/CSharp/MVC/Dojodachi/wwwroot/css/site.css
+++ b/CSharp/MVC/Dojodachi/wwwroot/css/site.css
@@ -44,6 +44,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  background-color: #fbecab;
 }
 .footer {
   position: absolute;
@@ -53,4 +54,30 @@ body {
   /* Set the fixed height of the footer here */
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
+}
+
+/* My Style */
+.content {
+  text-align: center;
+  margin-top: 160px;
+}
+
+.statusBar p {
+  display: inline-block;
+}
+
+.board {
+  margin-top: 30px;
+  margin-bottom: 40px;
+}
+
+.board img {
+  width: 300px;
+  height: 300px;
+  border-radius: 25px;
+}
+
+.playButton button {
+  margin-left: 5px;
+  margin-right: 5px;
 }
