--- a/CSharp/MVC/BankAccount/Views/Home/Index.cshtml
+++ b/CSharp/MVC/BankAccount/Views/Home/Index.cshtml
@@ -1,8 +1,45 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Register";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@model User
+
+<div class="content">
+    <br /><br />
+    <div class="row">
+        <div class="col"></div>
+        <div class="col">
+            <h3>Register</h3>
+            <form asp-action="VerifyRegister" asp-controller="Home" method="post">
+                <div class="form-group">
+                    <label asp-for="FirstName"></label>
+                    <input asp-for="FirstName" class="form-control">
+                    <small><span asp-validation-for="FirstName" style="color: red"></span></small>
+                </div>
+                <div class="form-group">
+                    <label asp-for="LastName"></label>
+                    <input asp-for="LastName" class="form-control">
+                    <small><span asp-validation-for="LastName" style="color: red"></span></small>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Email"></label>
+                    <input asp-for="Email" class="form-control">
+                    <small><span asp-validation-for="Email" style="color: red"></span></small>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Password"></label>
+                    <input asp-for="Password" class="form-control">
+                    <small><span asp-validation-for="Password" style="color: red"></span></small>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ConfirmPassword"></label>
+                    <input asp-for="ConfirmPassword" class="form-control">
+                    <small><span asp-validation-for="ConfirmPassword" style="color: red"></span></small>
+                </div>
+                <p><a href="/login">Already Registered?</a></p>
+                <button type="submit" class="btn btn-dark">Register</button>
+            </form>
+        </div>
+        <div class="col"></div>
+    </div>
 </div>
